--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="back-icon">
-        <a href="sign_in.html"><img src="https://cdn-icons.flaticon.com/png/512/2732/premium/2732652.png?token=exp=1656344272~hmac=e5308c901220818e1e6dc3d4b470795c" alt=""></a>
+        <a href="sign_in.html"><img src="2732652.png" alt=""></a>
     </div>
 </body>
 </html>
