menambahkan icon title head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Awikwok Academy</title>
+    <link rel="icon" href="Screenshot 2022-06-27 225942.jpg">
 </head>
 <body>
     <div class="container">
