--- a/video.html
+++ b/video.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awikwok Academy</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Screenshot 2022-06-27 225942.jpg">
 </head>
 <body>
     <div class="back-icon">
